--- a/src/components/WorkPageComponent.css
+++ b/src/components/WorkPageComponent.css
@@ -20,12 +20,13 @@
   font-size: 40px;
   font-weight: 900;
   margin-bottom: 40px;
-  text-align: left;
+  text-align: center;
 }
 
 .WorkPageText {
   color: #FFFFFF;
   font-size: 20px;
+  text-align: center;
 }
 
 .WorkPageCarouselContainer {
