--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,7 @@ p {
   margin: 0;
   font-family: 'HKGrotesk-Regular', 'sans-serif';
 }
+
+*:focus {
+    outline: none;
+}
